# BF-Copilot-Agent-Training

./: README.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Login.jsx  Welcome.jsx
frontend/src/services/: authService.js
